--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -20,6 +20,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "stripe": "^8.148.0",
+    "uuid": "^8.3.2"
   }
 }
